fixed dark mode on index

--- a/css/main.css
+++ b/css/main.css
@@ -97,12 +97,14 @@ button:hover {
 h2 {
     text-decoration: underline;
 }
-#index {
+main {
     font-size: var(--font-size);
     padding: var(--spacing);
     color: var(--font-color);
     background-color: var(--background-color);
     font-family: 'PT Sans', sans-serif;
+}
+#index {
     display: grid;
     grid-template-columns: 225px 1fr 225px;
     grid-template-rows: auto;
